# src/controllers/passageiro.controller.js
@@ -24,6 +24,32 @@ router.get('/passageiro/:id', async (req, res) => {
   }
 });
 
+router.put('/passageiro/:id', async (req, res) => {
+  const { id } = req.params;
+  const { nome, email, marketing } = req.body;
+  try {
+    let passageiro = await Passageiro.findById(id);
+
+    if (nome) {
+      passageiro.nome = nome;
+    }
+
+    if (email) {
+      passageiro.email = email;
+    }
+
+    if (marketing !== passageiro.marketing) {
+      passageiro.marketing = marketing;
+    }
+
+    passageiro = await passageiro.save();
+
+    return res.status(201).send({ passageiro });
+  } catch (err) {
+    return res.status(500).send({ error: err.message });
+  }
+});
+
 router.post('/passageiro/', async (req, res) => {
   const { nome, email, marketing } = req.body;
   try {
